# Generated by Django 6.0.1 on 2026-03-20 13:55

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Pago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(default=True, verbose_name='Activo')),
                ('monto', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Monto')),
                ('fecha', models.DateField(verbose_name='Fecha Pago')),
                ('estado', models.CharField(choices=[('pagado', 'Pagado'), ('pendiente', 'Pendiente')], default='pagado', max_length=10, verbose_name='Estado Pago')),
                ('tipo_pago', models.CharField(choices=[('parcial', 'Parcial'), ('completo', 'Completo')], default='parcial', max_length=10, verbose_name='Tipo Pago')),
            ],
            options={
                'verbose_name_plural': 'Pagos',
                'db_table': 'projects_pago',
            },
        ),
        migrations.CreateModel(
            name='PagoEmpleado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True, verbose_name='Fecha Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Fecha Actualización')),
                ('deleted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Eliminación')),
                ('activo', models.BooleanField(default=True, verbose_name='Activo')),
                ('monto', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Monto (Bs.)')),
                ('fecha', models.DateField(verbose_name='Fecha de Pago')),
                ('concepto', models.CharField(help_text='Ej: Anticipo, Saldo final, Mensualidad', max_length=255, verbose_name='Concepto')),
            ],
            options={
                'verbose_name': 'Pago a Empleado',
                'verbose_name_plural': 'Pagos a Empleados',
                'db_table': 'projects_pagoempleado',
                'ordering': ['-fecha'],
            },
        ),
    ]
